# ITASC

./: .gitignore  BUGS.md  CITATION.cff  CODE_REVIEW.md  CONTRIBUTING.md  CORRECTION_WIDGET_ROADMAP.md  IMPLEMENTATION_PLAN.md  NUCLEUS_IMPLEMENTATION_PLAN.md  NUCLEUS_WORKFLOW_UI_SPEC.md  PIPELINE_LAYOUT.md  PLAN_accordion_layout.md  PLAN_data_prep_widget.md  PLAN_global_config.md  PLAN_widget_ux_fix.md  README.md  REFACTOR_PLAN.md  REFACTOR_SPECS.md  REVIEW-2026-07-02.md  REVIEW-2026-07-03.md  REVIEW.md  SPECS_V2.md  TODO.md  ULTRACK_SIZE_FILTER_FINDINGS.md  flow_magnitude_findings.md  generate_sample_data.py  launch_napari.py  notes.md  pipeline_schema.json  pyproject.toml  ultrareview_findings.md
.github/workflows/: ci.yml  docs.yml
.qwen/: settings.json  settings.json.orig
CellFlowUtils/: .gitignore  README.md  pyproject.toml
CellFlowUtils/src/cellflow_utils/: napari.yaml
CellFlowUtils/src/cellflow_utils/core/: __init__.py  data_prep.py
CellFlowUtils/src/cellflow_utils/napari/: __init__.py  data_prep_standalone_widget.py  data_prep_widget.py  hpc_cellpose_widget.py  nls_classification_widget.py
CellFlowUtils/tests/contact_analysis/: test_nls_classification.py
CellFlowUtils/tests/core/: test_data_prep.py
CellFlowUtils/tests/napari/: test_data_prep_widget.py  test_hpc_cellpose_widget.py  test_nls_classification_widget.py  test_plugin_manifest.py
archive/: PLAN_cell_tracking.md  PLAN_seeded_tracker.md  test_numba_watershed.py
archive/docs-prose/: README.md
archive/notes/: 2026-04-30-shortcuts-box-reorder.md  2026-04-30-validated-seed-prior-ultrack.md  2026-05-05-flow-following-cell-segmentation.md  2026-05-06-watershed-hierarchy-skips-intermediate-levels.md  2026-05-07-ultrack-db-browser-height-cut-hides-intermediate-nodes.md  PLAN_extend_track.md  PLAN_validation_and_constrained_resolve.md  contour_watershed_followups.md  inbox.md
archive/plans/: 2026-04-29-nucleus-segmentation-and-tracking-design.md  2026-04-30-validated-seed-prior-ultrack-design.md  2026-05-04-cell-segmentation-contour-maps.md  2026-05-04-graphcut-cell-segmentation.md
archive/specs/: 2026-05-03-canonical-ultrack-nucleus-workflow-design.md  2026-05-04-graphcut-cell-segmentation-design.md
archive/v1/: DESIGN.md  NUCLEUS_HYPOTHESES_WIDGET_SPEC.md  generate_sample_data.py  pyproject.toml  test_poisson_watershed.py
cellflow/: __init__.py  napari.yaml
cellflow/analysis/: modules.py  tagging.py
cellflow/backend/: analysis_modules.py  graph.py  labels.py  segmentation.py  trajectories.py
cellflow/core/: forsys_adapter.py  graph.py  label_tracking.py  labels.py  mechanics.py
cellflow/correction/: _labels.py  _tracks.py  _widget.py
cellflow/dashboard/: __init__.py  __main__.py  app.py  themes.py
cellflow/frontend/: analysis_widget.py  correction_widget.py  databank_widget.py  forces_widget.py  (+8 more)
docs/: .gitignore  conf.py  dataflow_flowchart.md  index.md
napariTissueFlow/: __init__.py  napari.yaml  structures.py
napariTissueGraph/: __init__.py  napari.yaml  structures.py
notebooks/: position_analysis_h5_overview.ipynb  position_analysis_h5_overview_2026-04-01.ipynb  position_analysis_project_description.md
notes/: 2026-05-06-resolve-validated-track-extension-debug.md  2026-05-06-watershed-hierarchy-skips-intermediate-levels.md  2026-06-01-cell-preview-smoothing-and-labels-design.md  2026-06-10-cell-shape-quantifier-and-table-explorer-design.md  2026-06-11-track-dynamics-quantifier-design.md  PLAN_direct_ultrack_ingestion.md  PLAN_replace_iou_linker_with_retracker_scoring.md  aggregate_quantification_spec.md  alternative_contour_path_overview.md  anchors_and_validated_tracks_design.md  cell_segmentation_contour_maps_status.md  cell_widget_simplified_spec.md  cellflow_source_concatenated.md  cellpose_visualization_design.md  db_browser_node_graph_spec.md  divergence_maps_spec.md  frame_selector_experiment_findings.md  meta_analyzer_design_sketch.md  multi_threshold_design.md  progressive_threshold_sweep_feature.md  project_synthesis.md  technical_debt_audit_2026-05-15.md  ultrack_anchor_iou_experiment_findings.md
sample_data/: nuclear_tracks.csv
scripts/: README.md  benchmark_ultrack_phase2.py  compare_watershed_algorithms.py  compare_watershed_inputs.py  compare_zslice_vs_zavg_cellpose.py  debug_propagator.py  dedup_ultrack_db.py  diag_spectral_separation.py  embed_calibration.py  experiment_atoms_to_db.py  experiment_bg_subtract.py  experiment_binary_contours.py  experiment_cell_2d_graphcut.py  experiment_cell_2d_optical_flow_watershed.py  experiment_cell_2d_seeded_watershed.py  experiment_cell_2d_t_multilabel_graphcut.py  experiment_cell_2d_temporal_agreement_watershed.py  experiment_cell_2d_temporal_smooth_watershed.py  experiment_cell_3d_seeded_watershed.py  experiment_consensus_movie.py  experiment_contour_highpass.py  experiment_contour_pools_fg.py  experiment_flow_magnitude_fg.py  experiment_foreground_particle_seeds.py  experiment_frame_selector.py  experiment_grow_seeds.py  experiment_localadapt_fg.py  experiment_niter_sweep.py  experiment_nucleus_divergence_contours.py  experiment_nucleus_optical_flow_temporal_smoothing.py  experiment_optical_flow_prototype.py  experiment_residual_atoms.py  experiment_rim_ridge_atoms.py  make_dimensionality_fixtures.py  precompute_cellpose_probability_zavgs.py  probe_ultrack_db.py  render_pos08_last_frame_panel.py  render_pos08_movies.py  run_ultrack_anchor_experiment.py  run_ultrack_hierarchy_vs_direct_experiment.py  (+9 more)
tests/: compare_forsys.py  conftest.py  test_analysis_modules.py  test_api.py  test_cellpose_cluster_stage.py  test_ci_workflow.py  test_dashboard.py  test_dataset.py  test_extracted_packages.py  test_forsys.py  test_graph.py  test_io.py  test_label_tracking.py  test_labels.py  test_nucleus_hypotheses_h5.py  test_packaging_metadata.py  test_public_api_boundary.py  test_raw_import_zshift.py  test_scripts_imports.py  test_staged_pipeline.py  test_tagging.py  test_topology.py  test_trackmate.py  test_ultrack_ingestion.py  test_ultrack_linking.py  test_ultrack_pruning.py  test_visualization.py  test_voronoi.py
(+965 files in other folders)
