[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cellflow"
version = "0.2.0"
description = "Fast, interactive cell tracking"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GPL-3.0"}
authors = [{name = "Artur Ruppel", email = "artur@ruppel.pro"}]
keywords = ["cell-tracking", "microscopy", "napari", "segmentation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: napari",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Image Processing",
]

dependencies = [
    "napari[all]>=0.4.18",
    "qtpy>=2.3.0",
    "h5py",
    "numpy",
    "scipy",
    "scikit-image",
    "pandas",
    "tifffile",
    "numba",
    "matplotlib>=3.9.4",
    "pymaxflow>=1.3.2",
    "pydantic",
    "sqlalchemy",
    "pyqtgraph>=0.13",
]

[project.urls]
Homepage = "https://github.com/ArturRuppel/CellFlow"
Repository = "https://github.com/ArturRuppel/CellFlow"
Issues = "https://github.com/ArturRuppel/CellFlow/issues"

[project.optional-dependencies]
cellpose = [
    "cellpose>=4.0",
    "torch",
    "torchvision",
]
tracking = [
    "ultrack",
]
all = [
    "cellflow[cellpose,tracking]",
]
test = [
    "pytest>=8",
    "tomli>=2.0; python_version < '3.11'",
]
dev = [
    "pytest>=8",
    "ruff>=0.11",
    "tomli>=2.0; python_version < '3.11'",
]

[project.entry-points."napari.manifest"]
# A Python distribution may register exactly one napari manifest, and npe2
# requires its name to match the distribution. The full install therefore
# exposes the extracted pieces' widgets by folding their contributions into the
# single cellflow manifest (see src/cellflow/napari.yaml) rather than
# registering the standalone cellflow-aggregate / cellflow-tracking manifests.
cellflow = "cellflow:napari.yaml"

[tool.hatch.build.targets.wheel]
packages = ["src/cellflow"]

[tool.hatch.build.targets.sdist]
exclude = [
    "/docs/superpowers",
    "/notes",
    "/notebooks",
    "/scripts/__pycache__",
    "/dist",
    "/.claude",
    "/.qwen",
    "*.pyc",
    "*.nbi",
    "*.nbc",
]

[tool.hatch.build.targets.wheel.shared-data]
"src/cellflow/napari.yaml" = "cellflow/napari.yaml"

[tool.ruff]
target-version = "py310"
src = ["src", "tests"]
extend-exclude = [
    "docs/superpowers",
    "notes",
    "notebooks",
    "scripts/__pycache__",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore:`json_encoders` is deprecated.*:pydantic.warnings.PydanticDeprecatedSince20",
]

[tool.ruff.lint]
select = [
    "E4",
    "E9",
    "F401",
    "F821",
    "F811",
    "UP",
]
