[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "itasc"
version = "0.2.0.dev0"
description = "Fast, interactive cell tracking"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "AGPL-3.0"}
authors = [{name = "Artur Ruppel", email = "artur@ruppel.pro"}]
keywords = ["cell-tracking", "microscopy", "napari", "segmentation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: napari",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Image Processing",
]

dependencies = [
    "napari[all]>=0.4.18",
    "qtpy>=2.3.0",
    "h5py",
    "numpy",
    "scipy",
    "scikit-image",
    "pandas",
    "pyarrow",
    "tifffile",
    "numba",
    "matplotlib>=3.9.4",
    "seaborn>=0.13",
    "pymaxflow>=1.3.2",
    "pydantic",
    "sqlalchemy",
    "pyqtgraph>=0.13",
]

[project.urls]
Homepage = "https://github.com/ArturRuppel/ITASC"
Repository = "https://github.com/ArturRuppel/ITASC"
Issues = "https://github.com/ArturRuppel/ITASC/issues"

[project.optional-dependencies]
cellpose = [
    "cellpose>=4.0",
    "torch",
    "torchvision",
]
tracking = [
    "ultrack",
]
all = [
    "itasc[cellpose,tracking]",
]
test = [
    "pytest>=8",
    "tomli>=2.0; python_version < '3.11'",
]
dev = [
    "pytest>=8",
    "ruff>=0.11",
    "tomli>=2.0; python_version < '3.11'",
]
docs = [
    "sphinx>=7",
    "myst-parser>=2",
    "furo>=2024.1",
    "sphinx-design>=0.5",
    "sphinx-autodoc-typehints>=1.25",
    "sphinxcontrib-mermaid>=0.9",
    "sphinx-autobuild>=2024.2",
]

[project.entry-points."napari.manifest"]
# A Python distribution may register exactly one napari manifest, and npe2
# requires its name to match the distribution. The full install therefore
# exposes the extracted pieces' widgets by folding their contributions into the
# single itasc manifest (see src/itasc/napari.yaml) rather than
# registering the standalone itasc-aggregate / itasc-tracking manifests.
itasc = "itasc:napari.yaml"

[tool.hatch.build.targets.wheel]
packages = ["src/itasc"]

[tool.hatch.build.targets.sdist]
exclude = [
    "/docs/superpowers",
    "/notes",
    "/notebooks",
    "/scripts/__pycache__",
    "/dist",
    "/.claude",
    "/.qwen",
    "*.pyc",
    "*.nbi",
    "*.nbc",
]

[tool.hatch.build.targets.wheel.shared-data]
"src/itasc/napari.yaml" = "itasc/napari.yaml"

[tool.ruff]
target-version = "py310"
src = ["src", "tests"]
extend-exclude = [
    "docs/superpowers",
    "notes",
    "notebooks",
    "scripts/__pycache__",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore:`json_encoders` is deprecated.*:pydantic.warnings.PydanticDeprecatedSince20",
]

[tool.ruff.lint]
select = [
    "E4",
    "E9",
    "F401",
    "F821",
    "F811",
    "UP",
]

[tool.ruff.lint.per-file-ignores]
# Tests import napari/Qt only after setting QT_QPA_PLATFORM=offscreen, and
# import fixtures next to the test that needs them, so module-level import
# placement (E402) and terse one-line imports (E401) are intentional here.
"tests/**" = ["E401", "E402"]
